Closed
Bug 530360
Opened 16 years ago
Closed 16 years ago
Replace PR_MIN/PR_MAX with NS_MIN/NS_MAX in /accessible
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
mozilla1.9.3a1
People
(Reporter: lusian, Assigned: lusian)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
|
1.26 KB,
patch
|
MarcoZ
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a1pre) Gecko/20091120 Minefield/3.7a1pre (.NET CLR 3.5.30729)
Build Identifier:
Please see Bug #512106.
Reproducible: Always
| Assignee | ||
Comment 1•16 years ago
|
||
Attachment #413870 -
Flags: review?(marco.zehe)
Comment 2•16 years ago
|
||
Comment on attachment 413870 [details] [diff] [review]
Search&Replace, 0
r=me.
Attachment #413870 -
Flags: review?(marco.zehe) → review+
Comment 3•16 years ago
|
||
Alex, David, any objections to this change?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•16 years ago
|
Assignee: nobody → lusian
Status: NEW → ASSIGNED
Comment 4•16 years ago
|
||
(In reply to comment #3)
> Alex, David, any objections to this change?
Objections in bug 512106 summary.
Comment 5•16 years ago
|
||
Note to self: Land this when m-c gets out of restricted mode. This isn't critical for 1.9.2, so no justification to land it now.
Keywords: checkin-needed
Comment 6•16 years ago
|
||
(In reply to comment #3)
> Alex, David, any objections to this change?
I don't have any objections.
Comment 7•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite-
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
You need to log in
before you can comment on or make changes to this bug.
Description
•