Bug 530360 - Replace PR_MIN/PR_MAX with NS_MIN/NS_MAX in /accessible, r=marco.zehe